Stop disabling form, align select widgets cols at top not bottom.

--- a/static/scss/auth.scss
+++ b/static/scss/auth.scss
@@ -17,7 +17,7 @@
   }
 
   .col {
-    align-self: flex-end;
+    align-self: flex-start;
   }
 
   .dotted {
